Added `lastmod` functionality.
Signed-off-by: Bartlomiej Plotka <bwplotka@gmail.com>

--- a/pkg/transform/testdata/mdox1.yaml
+++ b/pkg/transform/testdata/mdox1.yaml
@@ -10,7 +10,7 @@ transformations:
     path: _index.md
     frontMatter:
       template: |
-        title: "{{ .FirstHeader }}"
+        title: "{{ .OriginFirstHeader }}"
 
         cascade:
         - type: "docs"
@@ -20,4 +20,5 @@ transformations:
   - glob: "**/README.md"
     frontMatter:
       template: |
-        title: "{{ .FirstHeader }}"
+        title: "{{ .OriginFirstHeader }}"
+        lastmod: "{{ .OriginLastMod }}"
