--- a/pkg/transform/testdata/mdox2.yaml
+++ b/pkg/transform/testdata/mdox2.yaml
@@ -10,7 +10,7 @@ transformations:
     path: _index.md
     frontMatter:
       template: |
-        title: "{{ .OriginFirstHeader }}"
+        title: "{{ .Origin.FirstHeader }}"
 
         cascade:
         - type: "docs"
@@ -20,17 +20,17 @@ transformations:
   - glob: "/doc.md"
     frontMatter:
       template: |
-        title: "{{ .OriginFirstHeader }}"
+        title: "{{ .Origin.FirstHeader }}"
 
   - glob: "/Team/doc.md"
     path: inner/doc.md
     frontMatter:
       template: |
-        title: "{{ .OriginFirstHeader }}"
+        title: "{{ .Origin.FirstHeader }}"
         yolo: "yolo"
 
   - glob: "**/README.md"
     path: /test1/_index.md
     frontMatter:
       template: |
-        title: "{{ .OriginFirstHeader }}"
+        title: "{{ .Origin.FirstHeader }}"
