Added skip and static dir funciton.
Signed-off-by: Bartlomiej Plotka <bwplotka@gmail.com>

--- a/pkg/transform/testdata/mdox1.yaml
+++ b/pkg/transform/testdata/mdox1.yaml
@@ -2,6 +2,7 @@ version: 1
 
 inputDir: "testdata/testproj"
 outputDir: "testdata/tmp/1"
+outputStaticDir: "testdata/tmp/1static"
 
 gitIgnored: true
 
