Added extra file functionality.
Signed-off-by: Bartlomiej Plotka <bwplotka@gmail.com>

--- a/pkg/transform/testdata/mdox2.yaml
+++ b/pkg/transform/testdata/mdox2.yaml
@@ -2,12 +2,14 @@ version: 1
 
 inputDir: "testdata/testproj"
 outputDir: "testdata/tmp/2"
+extraInputGlobs:
+  - "../../README.md"
 
 gitIgnored: true
 localLinksStyle: hugo
 
 transformations:
-  - glob: "/README.md"
+  - glob: "/../../../../README.md"
     path: _index.md
     frontMatter:
       template: |
