Added support for modifying links in image URLs. Fixed linking when adding extra files from outside.
Signed-off-by: Bartlomiej Plotka <bwplotka@gmail.com>

--- a/pkg/transform/testdata/mdox1.yaml
+++ b/pkg/transform/testdata/mdox1.yaml
@@ -7,7 +7,7 @@ outputStaticDir: "testdata/tmp/1static"
 gitIgnored: true
 
 transformations:
-  - glob: "/README.md"
+  - glob: "README.md"
     path: _index.md
     frontMatter:
       template: |
