--- a/pkg/transform/testdata/mdox1.yaml
+++ b/pkg/transform/testdata/mdox1.yaml
@@ -22,5 +22,5 @@ transformations:
     frontMatter:
       template: |
         title: "{{ .Origin.FirstHeader }}"
-        lastmod: "{{ .Origin.LastMod }}"
+        lastmod: "TODO: Allow testing last mod .Origin.LastMod"
         slug: "{{ .Target.FileName }}"
