--- a/pkg/transform/testdata/mdox2.yaml
+++ b/pkg/transform/testdata/mdox2.yaml
@@ -4,6 +4,7 @@ inputDir: "testdata/testproj"
 outputDir: "testdata/tmp/test2/2"
 extraInputGlobs:
   - "testdata/test.md"
+  - "testdata/teststatic"
 
 gitIgnored: true
 localLinksStyle:
@@ -11,6 +12,9 @@ localLinksStyle:
     indexFileName: "_index.md"
 
 transformations:
+  - glob: "../teststatic/**"
+    path: /favicons/**
+
   - glob: "../test.md"
     path: /_index.md
     frontMatter:
