--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -55,4 +55,5 @@ jobs:
       - name: Run unit tests.
         env:
           GOBIN: /tmp/.bin
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make test
