Add option to preserve header (#58)
* Add popHeader option

Signed-off-by: Saswata Mukherjee <saswataminsta@yahoo.com>

* Make root file popHeader default

Signed-off-by: Saswata Mukherjee <saswataminsta@yahoo.com>

* Fix test

Signed-off-by: Saswata Mukherjee <saswataminsta@yahoo.com>

--- a/pkg/transform/testdata/mdox1.yaml
+++ b/pkg/transform/testdata/mdox1.yaml
@@ -18,6 +18,7 @@ transformations:
             path: "/**"
 
   - glob: "**/README.md"
+    popHeader: true
     frontMatter:
       template: |
         title: "{{ .Origin.FirstHeader }}"
