--- a/pkg/transform/testdata/mdox3.yaml
+++ b/pkg/transform/testdata/mdox3.yaml
@@ -35,6 +35,7 @@ transformations:
 
 
   - glob: "**.md"
+    popHeader: true
     backMatter:
       template: |
         Found a typo, inconsistency or missing information in our docs?
