Add Path to transform template
Signed-off-by: Saswata Mukherjee <saswataminsta@yahoo.com>

--- a/pkg/transform/testdata/mdox3.yaml
+++ b/pkg/transform/testdata/mdox3.yaml
@@ -39,7 +39,7 @@ transformations:
     backMatter:
       template: |
         Found a typo, inconsistency or missing information in our docs?
-        Help us to improve [Thanos](https://thanos.io) documentation by proposing a fix [on GitHub here](https://github.com/thanos-io/thanos/edit/main/docs/{{ .Origin.Filename }}) :heart:
+        Help us to improve [Thanos](https://thanos.io) documentation by proposing a fix [on GitHub here](https://github.com/thanos-io/thanos/edit/main/{{ .Origin.Path }}) :heart:
 
 
   - glob: "**"
