Update example validate configuration
Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

--- a/examples/.mdox.validate.yaml
+++ b/examples/.mdox.validate.yaml
@@ -1,12 +1,15 @@
 version: 1
+timeout: "1m"
+parallelism: 100
+host_max_conns: 2
+random_delay: "1s"
 
 validators:
   - regex: '(^http[s]?:\/\/)(www\.)?(github\.com\/)bwplotka\/mdox(\/pull\/|\/issues\/)'
-    type: 'githubPullsIssues'
+    type: "githubPullsIssues"
 
-  - regex: 'localhost'
-    type: 'ignore'
+  - regex: "localhost"
+    type: "ignore"
 
   - regex: 'thanos\.io'
-    type: 'roundtrip'
-
+    type: "roundtrip"
