Try to avoid intermittent errors when checking links (#86)
* Avoid using the default HTTP transport

It's a global tranpsort and could be changed by any dependency.

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Add sensible timeouts and reduce parallelism

This is an effort to avoid random errors when checking a bunch of links
across many files:

- Considering this is a tool often ran in resource constrained
  environments, like Github Actions, the HTTP client timeout was bumped
  to 30 seconds.

- Colly was configured with a depth of 1, to avoid crawling too much
  information from the websites

- The parallelism configuration of `colly` has been brought down from 100
  to 10. This setting means that at most 10 requests will be sent in
  parallel for the same matching domain. This way we are more friendly
  to the servers and hopefully they will be happier with us too, returning
  more responses with 200 status code.

- Added a random delay of up to 1 second to create new requests to
  matching domains, again to be more friendly with the servers, etc,  etc.

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Move away from `Dial` (it's deprecated)

`DialContext` is the new way to go.

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Remove maxDepth and default timeout of 30s

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Make a few HTTP options configurable

These options are:
* Colly's HTTP parallelism
* Colly's random delay between HTTP requests
* HTTP transport's max connections per host

* Fix MaxConnsPerHost usage

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Update example validate configuration

Signed-off-by: Douglas Camata <159076+douglascamata@users.noreply.github.com>

* Add documentation about default config values

Signed-off-by: D

--- a/examples/.mdox.validate.yaml
+++ b/examples/.mdox.validate.yaml
@@ -1,4 +1,8 @@
 version: 1
+timeout: '1m'
+parallelism: 100
+host_max_conns: 2
+random_delay: '1s'
 
 validators:
   - regex: '(^http[s]?:\/\/)(www\.)?(github\.com\/)bwplotka\/mdox(\/pull\/|\/issues\/)'
@@ -9,4 +13,3 @@ validators:
 
   - regex: 'thanos\.io'
     type: 'roundtrip'
-
