--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -1,4 +1,4 @@
-# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.6. DO NOT EDIT.
+# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.8. DO NOT EDIT.
 # All tools are designed to be build inside $GOBIN.
 # Those variables will work only until 'bingo get' was invoked, or if tools were installed via Makefile's Variables.mk.
 GOBIN=${GOBIN:=$(go env GOBIN)}
@@ -8,13 +8,13 @@ if [ -z "$GOBIN" ]; then
 fi
 
 
+BINGO="${GOBIN}/bingo-v0.8.0"
+
 EMBEDMD="${GOBIN}/embedmd-v1.0.0"
 
-FAILLINT="${GOBIN}/faillint-v1.10.0"
+FAILLINT="${GOBIN}/faillint-v1.11.0"
 
 GOIMPORTS="${GOBIN}/goimports-v0.0.0-20200519204825-e64124511800"
 
-GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.46.2"
-
-MISSPELL="${GOBIN}/misspell-v0.3.4"
+GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.51.2"
 
