--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -14,7 +14,7 @@ EMBEDMD="${GOBIN}/embedmd-v1.0.0"
 
 FAILLINT="${GOBIN}/faillint-v1.11.0"
 
-GOIMPORTS="${GOBIN}/goimports-v0.0.0-20200519204825-e64124511800"
+GOIMPORTS="${GOBIN}/goimports-v0.8.0"
 
 GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.51.2"
 
