--- a/.golangci.yml
+++ b/.golangci.yml
@@ -49,7 +49,10 @@ linters:
 
 linters-settings:
   errcheck:
-    exclude: ./.errcheck_excludes.txt
+    exclude-functions:
+      - (github.com/go-kit/log.Logger).Log
+      - fmt.Fprintln
+      - fmt.Fprint
   misspell:
     locale: US
   goconst:
