Avoid types juggling

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,6 +39,7 @@ linters:
     - gosimple
     - govet
     - ineffassign
+    # - mirror  # requires golangci-lint 1.53
     - misspell
     - staticcheck
     - structcheck
